ver 0.18 (2012/??/??)
* decoder:
  - adplug: new decoder plugin using libadplug
  - opus: new decoder plugin for the Opus codec
  - vorbis: skip 16 bit quantisation, provide float samples
* encoder:
  - opus: new encoder plugin for the Opus codec
  - vorbis: accept floating point input samples
* output:
  - new option "tags" may be used to disable sending tags to output
* improved decoder/output error reporting

ver 0.17.3 (2012/??/??)
* output:
  - recorder: fix I/O error check
  - shout: fix memory leak in error handler
  - recorder, shout: support Ogg packets that span more than one page

ver 0.17.2 (2012/09/30)
* protocol:
  - fix crash in local file check
* decoder:
  - fluidsynth: remove throttle (requires libfluidsynth 1.1)
  - fluidsynth: stop playback at end of file
  - fluidsynth: check MIDI file format while scanning
  - fluidsynth: add sample rate setting
  - wavpack: support all APEv2 tags
* output:
  - httpd: use monotonic clock, avoid hiccups after system clock adjustment
  - httpd: fix throttling bug after resuming playback
* playlist:
  - cue: map "PERFORMER" to "artist" or "album artist"
* mapper: fix non-UTF8 music directory name
* mapper: fix potential crash in file permission check
* playlist: fix use-after-free bug
* playlist: fix memory leak
* state_file: save song priorities
* player: disable cross-fading in "single" mode
* update: fix unsafe readlink() usage
* configure.ac:
  - don't auto-detect the vorbis encoder when Tremor is enabled

ver 0.17.1 (2012/07/31)
* protocol:
  - require appropriate permissions for searchadd{,pl}
* tags:
  - aiff: support the AIFC format
  - ape: check for ID3 if no usable APE tag was found
* playlist:
  - cue: support file types "MP3", "AIFF"
* output:
  - fix noisy playback with conversion and software volume

ver 0.17 (2012/06/27)
* protocol:
  - support client-to-client communication
  - "update" and "rescan" need only "CONTROL" permission
  - new command "seekcur" for simpler seeking within current song